--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-type-animation": "^2.1.2"
   },
   "devDependencies": {
