--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.4",
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
